public interface NodeSubscriber {
    void update();
}