package org.blakkroze.calculia.nodes;

public class NegNode extends Node {

    public Node getArgNode() {
        return new Node();
    }

}
