package org.blakkroze.calculia.nodes;

public class SubNode extends Node {

    public Node getLeftArgNode() {
        return new Node();
    }
    public Node getRightArgNode() {
        return new Node();
    }

}
